refactor: seperate views

--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>지뢰피하기</title>
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="/views/main.css">
 </head>
 <body>
     <div id="canvas-container" class="flex">
@@ -74,7 +74,7 @@
         </div>
         <canvas id="canvas" width="1920", height="920"></canvas>
     </div>
-    <script src="./constant.js"></script>
-    <script src="./script.js"></script>
+    <script src="/views/constant.js"></script>
+    <script src="/views/script.js"></script>
 </body>
 </html>
