--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,7 @@
     <div id="canvas-container" class="flex">
         <div id="msg-box" class="elem flex hidden"></div>
         <div id="game-result" class="elem flex-column hidden">
-            <div class="title margin">GAME OVER</div>
+            <div id="game-result-title" class="title margin"></div>
             <div class="flex">
                 <div class="game-result-left">STAGE</div>
                 <div class="space"></div>
