--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>지뢰피하기</title>
     <link rel="stylesheet" href="/views/main.css">
+    <link rel="shortcut icon" href="/images/favicon.ico">
 </head>
 <body>
     <div id="canvas-container" class="flex">
