Add update log button and div

--- a/views/index.html
+++ b/views/index.html
@@ -92,9 +92,15 @@
             </div>
             <div id="leaderboard-footer" class="margin2">A, D를 눌러 순위표 목록을 이동할 수 있습니다.<br>F를 누르면 메인 화면으로 돌아갑니다.<br><br>비속어나 부적절한 표현의 이름을 사용한 기록은 관리자에 의해 삭제될 수 있습니다.</div>
         </div>
+        <div id="update-log" class="elem flex-column hidden align-center">
+            <div id="update-log-title" class="title margin">🛠 패치 노트 🛠</div>
+            <div id ="update-log-article" class="align-left overflow border-bottom3"></div>
+            <div id="update-log-footer" class="margin">F를 누르면 창을 닫습니다.</div>
+        </div>
         <canvas id="canvas" width="1920", height="920"></canvas>
     </div>
     <script src="/views/constant.js"></script>
+    <script src="/views/updateLog.js"></script>
     <script src="/views/script.js"></script>
 </body>
 </html>
