--- a/views/main.css
+++ b/views/main.css
@@ -4,6 +4,10 @@ body {
     background: rgb(90, 96, 116);
 }
 
+li {
+    list-style-position: inside;
+}
+
 .elem {
     position: absolute;
     top: 0%;
@@ -57,6 +61,10 @@ body {
     text-align: center;
 }
 
+.align-left {
+    text-align: left;
+}
+
 .space {
     width: 10%;
     text-align: center;
@@ -102,6 +110,34 @@ body {
     border-bottom: 1px solid lightgray;
 }
 
+.border-bottom3 {
+    border-bottom: 3px dotted gray;
+}
+
+.overflow {
+    overflow: auto;
+}
+
+.h1 {
+    font-size: 60px;
+    margin: 30px 0;
+}
+
+.h2 {
+    font-size: 45px;
+    margin: 22px 0;
+}
+
+.h3 {
+    font-size: 25px;
+    margin: 13px 0;
+}
+
+.h4 {
+    font-size: 20px;
+    margin: 10px 0;
+}
+
 #msg-box {
     top: 10%;
     border: 3px solid black;
@@ -117,7 +153,7 @@ body {
     font-size: 20px;
 }
 
-#information, #input-id, #leaderboard {
+#information, #input-id, #leaderboard, #update-log {
     top: 50%;
     opacity: 1;
 }
