--- a/views/main.css
+++ b/views/main.css
@@ -65,6 +65,10 @@ li {
     text-align: left;
 }
 
+.align-right {
+    text-align: right;
+}
+
 .space {
     width: 10%;
     text-align: center;
@@ -102,6 +106,11 @@ li {
     row-gap: 10px;  
 }
 
+.grid2 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
 .border-bottom {
     border-bottom: 2px solid gray;
 }
@@ -116,6 +125,10 @@ li {
 
 .overflow {
     overflow: auto;
+}
+
+.inline-block{
+    display: inline-block;
 }
 
 .h1 {
@@ -138,6 +151,54 @@ li {
     margin: 10px 0;
 }
 
+.challenge-mode {
+    padding: 15px;
+    border: 3px solid black;
+    margin: 5px;
+    border-radius: 5%;
+    font-size: 25px;
+    text-align: left;
+    user-select: none;
+    cursor: pointer;
+}
+
+.challenge-mode:hover {
+    background-color: mistyrose;
+}
+
+.square {
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    border: 1px solid black;
+    border-right: none;
+}
+
+.square-purple {
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    border: 1px solid black;
+}
+
+.radio-span {
+    display:inline-block;
+    background:none;
+    border:1px solid #dfdfdf;  
+    padding:0px 10px;
+    text-align:center;
+    height:35px;
+    line-height:33px;
+    font-weight:500;
+    cursor:pointer;
+}
+
+.radio-span:checked {
+    border:1px solid #23a3a7;
+    background:#23a3a7;
+    color:#fff;
+}
+
 #msg-box {
     top: 10%;
     border: 3px solid black;
@@ -153,7 +214,7 @@ li {
     font-size: 20px;
 }
 
-#information, #input-id, #leaderboard, #update-log {
+#information, #input-id, #leaderboard, #update-log, #challenge, #challenge-fail {
     top: 50%;
     opacity: 1;
 }
@@ -174,6 +235,10 @@ li {
 #leaderboard-list {
     padding: 15px;
     border: 3px solid tomato;
+}
+
+#input[type="radio"] {
+    display: none;
 }
 
 #canvas {
