--- a/views/index.html
+++ b/views/index.html
@@ -83,34 +83,37 @@
         </div>
         <div id="leaderboard" class="elem flex-column hidden align-center">
             <div id="leaderboard-title" class="margin">순위표</div>
-            <div id="leaderboard-check" class="flex">
-                <div>
-                    <label class="box-radio-input">
-                        <input id="classic-check" type="radio" name="cp_item" checked="checked">
-                        <span id="leaderboard-mode01">클래식 모드</span>
-                    </label>
+            <div id="leaderboard-container" class="flex-column">
+                <div id="leaderboard-check" class="flex border-bottom4">
+                    <div class="half">
+                        <label class="box-radio-input">
+                            <input id="classic-check" class="hidden" type="radio" name="cp_item" checked="checked">
+                            <div id="leaderboard-mode01" class="radio">클래식 모드</div>
+                        </label>
+                    </div>
+                    <div class="half">
+                        <label id="leaderboard-mode02-label" class="box-radio-input">
+                            <input id="challenge-check" class="hidden" type="radio" name="cp_item">
+                            <div id="leaderboard-mode02" class="radio">도전 모드</div>
+                        </label>
+                    </div>
                 </div>
-                <div>
-                    <label class="box-radio-input">
-                        <input id="challenge-check" type="radio" name="cp_item">
-                        <span id="leaderboard-mode02">도전 모드</span>
-                    </label>
-                </div>
+                <div id="leaderboard-select" class="flex hidden"></div>
+                <div id="leaderboard-list" class="classic-grid"></div>
             </div>
-            <div id="leaderboard-list" class="grid"></div>
-            <div id="leaderboard-footer" class="margin2">A, D를 눌러 순위표 목록을 이동할 수 있습니다.<br>F를 누르면 메인 화면으로 돌아갑니다.<br>비속어나 부적절한 표현의 이름을 사용한 기록은 관리자에 의해 삭제될 수 있습니다.</div>
+            <div id="leaderboard-footer" class="margin2">목록 페이지 이동 [A, D]키,  메인 화면 이동 [F]키<br>비속어나 부적절한 표현의 이름을 사용한 기록은 관리자에 의해 삭제될 수 있습니다.</div>
         </div>
         <div id="update-log" class="elem flex-column hidden align-center">
             <div id="update-log-title" class="title margin">🛠 패치 노트 🛠</div>
             <div id ="update-log-article" class="align-left overflow border-bottom3"></div>
-            <div id="update-log-footer" class="margin">F를 누르면 창을 닫습니다.</div>
+            <div id="update-log-footer" class="margin">F를 누르면 창을 닫습니다. <a href="https://discord.gg/T3tFG6G3">건의사항 및 버그제보</a></div>
         </div>
         <div id="challenge" class="elem flex-column hidden align-center">
             <div id="challenge-title" class="title margin">맵 선택</div>
-            <div id="challenge-article" class="grid2 overflow border-bottom3"></div>
+            <div id="challenge-article" class="grid overflow border-bottom3"></div>
             <div id="challenge-footer" class="margin">F를 누르면 창을 닫습니다.</div>
         </div>
-        <div id="challenge-fail" class="drop flex-column hidden align-center">
+        <div id="challenge-fail" class="elem flex-column hidden align-center">
             <div id="challenge-fail-title" class="title margin">도전 실패</div>
             <div id="challenge-fail-article" class="margin2">
                 F키를 누르면 메인 화면으로 돌아갑니다.<br>
