--- a/views/index.html
+++ b/views/index.html
@@ -120,10 +120,16 @@
                 R키를 누르면 재도전합니다.
             </div>
         </div>
+        <div id="help" class="elem flex-column hidden align-center">
+            <div id="help-title" class="title margin">도움말</div>
+            <div id="help-article" class="help-grid overflow border-bottom"></div>
+            <div id="help-footer" class="margin">F를 누르면 창을 닫습니다.</div>
+        </div>
         <canvas id="canvas" width="1920", height="920"></canvas>
     </div>
-    <script src="/views/constant.js"></script>
+    <script src="/dist/constant.js"></script>
     <script src="/updateLog.js"></script>
-    <script src="/views/script.js"></script>
+    <script src="/help.js"></script>
+    <script src="/dist/script.js"></script>
 </body>
 </html>
