Change for deploy

--- a/views/index.html
+++ b/views/index.html
@@ -127,9 +127,9 @@
         </div>
         <canvas id="canvas" width="1920", height="920"></canvas>
     </div>
-    <script src="/dist/constant.js"></script>
+    <script src="/views/constant.js"></script>
     <script src="/updateLog.js"></script>
     <script src="/help.js"></script>
-    <script src="/dist/script.js"></script>
+    <script src="/views/script.js"></script>
 </body>
 </html>
