--- a/views/index.html
+++ b/views/index.html
@@ -2,9 +2,15 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
+
     <title>지뢰피하기</title>
     <link rel="stylesheet" href="/views/main.css">
     <link rel="shortcut icon" href="/images/favicon.ico">
+    <meta property="og:type" content="game"> 
+    <meta property="og:title" content="지뢰피하기">
+    <meta property="og:description" content="지뢰찾기를 응용한 새로운 퍼즐게임">
+    <meta property="og:image" content="/images/mine.png">
+    <meta property="og:url" content="https://avoidmine.herokuapp.com/">
 </head>
 <body>
     <div id="canvas-container" class="flex">
