--- a/views/index.html
+++ b/views/index.html
@@ -10,6 +10,8 @@
     <meta property="og:title" content="지뢰피하기">
     <meta property="og:description" content="지뢰찾기를 응용한 새로운 퍼즐게임">
     <meta property="og:image" content="/images/mine.png">
+    <meta property="og:image:width" content="150">
+    <meta property="og:image:height" content="150">
     <meta property="og:url" content="https://avoidmine.herokuapp.com/">
 </head>
 <body>
