--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-
+    <meta name="description" content="지뢰찾기를 응용한 새로운 퍼즐게임">
     <title>지뢰피하기</title>
     <link rel="stylesheet" href="/views/main.css">
     <link rel="shortcut icon" href="/images/favicon.ico">
