--- a/views/main.css
+++ b/views/main.css
@@ -1,6 +1,9 @@
-body {
+* {
     margin: 0;
     padding: 0;
+}
+
+body {
     background: rgb(90, 96, 116);
 }
 
@@ -254,6 +257,60 @@ input[type="radio"]:checked + div {
     text-align: center;
 }
 
+.dropdown {
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+    z-index: 2;
+}
+
+.dropdown-li {
+    list-style: none;
+    width: 100%;
+    height: 50px;
+    user-select: none;
+    cursor: pointer;
+}
+
+.dropdown-li:hover {
+    background-color: tomato;
+}
+
+.dropdown-li:hover * {
+    display: flex;
+}
+
+.diff-type {
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.map-dropdown {
+    display: none;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    z-index: 1;
+}
+
+.challenge-map-li:hover .map-dropdown {
+    display: flex;
+}
+
+.challenge-map-li:hover {
+    background-color: rgb(255, 154, 136);
+}
+
+.challenge-map-li {
+    width: 100%;
+    height: 50px;
+    justify-content: center;
+    background-color: rgba(255, 228, 225, 0.95);
+}
+
 .help-grid {
     width: 95%;
     display: grid;
@@ -416,6 +473,12 @@ input[type="radio"]:checked + div {
     
 }
 
+#leaderboard-select {
+    height: 50px;
+    justify-content: center;
+    background-color: #ffcccc;
+}
+
 #main-container {
     background-color: tomato;
     width: 100%;
@@ -423,7 +486,7 @@ input[type="radio"]:checked + div {
 }
 
 #help {
-    z-index: 1;
+    z-index: 9999;
 }
 
 #nav {
