--- a/views/index.html
+++ b/views/index.html
@@ -26,7 +26,7 @@
         </div>
         <div id="nav" class="elem flex-column user-select-none">
             <div id="nav-help" class="nav-item">도움말(Q)</div>
-            <div id="nav-help" class="nav-item"><a class="remove-line" href="https://discord.gg/vgrAtkUhjR" target="_blank">버그제보</a></div>
+            <div class="nav-item"><a class="remove-line" href="https://discord.gg/vgrAtkUhjR" target="_blank">버그제보</a></div>
         </div>
         <div id="game-result" class="drop flex-column hidden">
             <div id="game-result-title" class="title margin"></div>
