Change some mp3 files and Add license info

--- a/views/index.html
+++ b/views/index.html
@@ -24,9 +24,16 @@
             <div id="help-article" class="help-grid overflow border-bottom"></div>
             <div id="help-footer" class="margin">F를 누르면 창을 닫습니다.</div>
         </div>
+        <div id="license" class="elem flex-column hidden">
+            <div id="license-title" class="title margin">효과음 저작권 정보</div>
+            <div id="license-article" class="align-left overflow"></div>
+            <div id="license-footer" class="margin">F를 누르면 창을 닫습니다.</div>
+
+        </div>
         <div id="nav" class="elem flex-column user-select-none">
             <div id="nav-help" class="nav-item">도움말(Q)</div>
             <div class="nav-item"><a class="remove-line" href="https://discord.gg/vgrAtkUhjR" target="_blank">버그제보</a></div>
+            <div id="nav-license" class="nav-item">저작권</div>
         </div>
         <div id="game-result" class="drop flex-column hidden">
             <div id="game-result-title" class="title margin"></div>
